Further changes to Bundling update

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
@@ -1,7 +1,7 @@
 ﻿@model String
 @using SmartStore.Web.Framework.UI;
 @{
-    Html.AddScriptParts(
+    Html.AddScriptParts(true,
         "~/Content/editors/tinymce/tiny_mce_gzip.js", 
         "~/Content/editors/tinymce/globalinit.js");
 
