#160 Resource on confirm order page isn't escaped

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -111,7 +111,7 @@
                                 {
                                         <text>
                                 if (!$('#termsofservice').is(':checked')) {
-                                    displayNotification('@T("Checkout.TermsOfService.PleaseAccept")', "error");
+                                    displayNotification('@T("Checkout.TermsOfService.PleaseAccept").ToString().EncodeJsString()', "error");
                                     termOfServiceOk = false;
                                     $.scrollTo($('#termsofservice'), 800, { offset: -70 });
                                 }
