--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Create.cshtml
@@ -10,8 +10,13 @@
             @T("Admin.Catalog.Products.AddNew") @Html.ActionLink("(" + T("Admin.Catalog.Products.BackToList") + ")", "List")
         </div>
         <div class="options">
-            <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
-            <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
+            <button type="submit" name="save" value="save" class="btn btn-primary entity-commit-trigger" data-commit-type="product" data-commit-action="insert" data-commit-id="@Model.Id">
+                <i class="icon-ok"></i>
+                @T("Admin.Common.Save")
+            </button>
+            <button type="submit" name="save" value="save-continue" class="btn entity-commit-trigger" data-commit-type="product" data-commit-action="insert" data-commit-id="@Model.Id">
+                @T("Admin.Common.SaveContinue")
+            </button>
         </div>
     </div>
     @Html.Partial("_CreateOrUpdate", Model)
