--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
@@ -20,14 +20,16 @@
                 <i class="icon-eye-open"></i>
                 @T("Admin.Common.Preview")
             </button>
-            <button type="submit" value="save" class="btn btn-primary">
-                <i class="icon-ok icon-white"></i>
+            <button type="submit" value="save" class="btn btn-primary entity-commit-trigger" data-commit-type="product" data-commit-action="update" data-commit-id="@Model.Id">
+                <i class="icon-ok"></i>
                 @T("Admin.Common.Save")
             </button>
-            <button type="submit" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
+            <button type="submit" value="save-continue" class="btn entity-commit-trigger" data-commit-type="product" data-commit-action="update" data-commit-id="@Model.Id">
+                @T("Admin.Common.SaveContinue")
+            </button>
             <a href="#copyproduct-window" data-toggle="modal" class="btn">@T("Admin.Catalog.Products.Copy")</a>
             <button type="submit" id="product-delete" class="btn btn-danger">
-                <i class="icon-trash icon-white"></i>
+                <i class="icon-trash"></i>
                 @T("Admin.Common.Delete")
             </button>
         </div>
