* Replaced dotLess engine with a native Javascript parser (Noesis.Javascript) * Added BundleTransformer package (with built-in LESS transformations) * IBundleProvider is obsolete now, as bundling happens dynamically * TBD: store-dependent caching of bundles is broken at the moment * Implemented 'Simple Widgets': added IWidget interface, this way widgets can be injected from anywhere, not just from plugins

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
     adminPageTitle += T("Admin.PageTitle").Text;
 
     // admin styles
-    Html.AppendCssFileParts(true, "~/Administration/Content/theme.less");
+    Html.AddCssFileParts(false, "~/Administration/Content/theme.less");
     
     // add css assets
     var jqueryCssRootPath = "~/Content/jquery-ui/base/";
@@ -42,8 +42,8 @@
 
     // add js assets (Head)
     Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-2.6.2.js",
-        "~/Scripts/jquery-1.8.3.js");
+        "~/Scripts/modernizr-{version}.js",
+        "~/Scripts/jquery-{version}.js");
 
     // add js assets (Foot)
     var bootstrapJsRoot = "~/Content/bootstrap/js/";
