--- a/src/Presentation/SmartStore.Web/Content/editors/tinymce/themes/advanced/skins/smartstore/dialog.less
+++ b/src/Presentation/SmartStore.Web/Content/editors/tinymce/themes/advanced/skins/smartstore/dialog.less
@@ -1,5 +1,5 @@
-@import '../../../../../../bootstrap/variables.less';
-@import '../../../../../../bootstrap/mixins.less';
+@import '~/Content/bootstrap/variables.less';
+@import '~/Content/bootstrap/mixins.less';
 
 /* Generic */
 body {
