--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -22,8 +22,8 @@
     
     // add js assets
     Html.AppendScriptParts(ResourceLocation.Head, 
-        "~/Scripts/modernizr-2.6.2.js",
-        "~/Scripts/jquery-1.8.3.js");
+        "~/Scripts/modernizr-{version}.js",
+        "~/Scripts/jquery-{version}.js");
 
     var bootstrapJsRoot = "~/Content/bootstrap/js/";
     Html.AppendScriptParts(ResourceLocation.Foot,
