--- a/src/Presentation/SmartStore.Web/Content/editors/tinymce/themes/advanced/skins/smartstore/ui.less
+++ b/src/Presentation/SmartStore.Web/Content/editors/tinymce/themes/advanced/skins/smartstore/ui.less
@@ -1,6 +1,6 @@
 
-@import "../../../../../../bootstrap/variables.less";
-@import "../../../../../../bootstrap/mixins.less";
+@import "~/Content/bootstrap/variables.less";
+@import "~/Content/bootstrap/mixins.less";
 
 /* Reset */
 .smartstoreSkin table, .smartstoreSkin tbody, .smartstoreSkin a, .smartstoreSkin img, .smartstoreSkin tr, .smartstoreSkin div, .smartstoreSkin td, .smartstoreSkin iframe, .smartstoreSkin span, .smartstoreSkin *, .smartstoreSkin .mceText {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; cursor:default; color:#555; vertical-align:baseline; width:auto; border-collapse:separate; text-align:left}
