--- a/src/Presentation/SmartStore.Web/Content/install/install.less
+++ b/src/Presentation/SmartStore.Web/Content/install/install.less
@@ -9,58 +9,58 @@
  */
 
 // CSS Reset
-@import "../bootstrap/reset.less";
+@import "~/Content/bootstrap/reset.less";
 
 // Core variables and mixins
 @import "variables.less";
 @import "variables.custom.less";
-@import "../bootstrap/mixins.less";
-@import "../bootstrap/custom/mixins.less";
+@import "~/Content/bootstrap/mixins.less";
+@import "~/Content/bootstrap/custom/mixins.less";
 
 // Grid system and page structure
-@import "../bootstrap/scaffolding.less";
-@import "../bootstrap/grid.less";
-@import "../bootstrap/layouts.less";
+@import "~/Content/bootstrap/scaffolding.less";
+@import "~/Content/bootstrap/grid.less";
+@import "~/Content/bootstrap/layouts.less";
 
 // Base CSS
-@import "../bootstrap/type.less";
-@import "../bootstrap/code.less";
-@import "../bootstrap/forms.less";
-@import "../bootstrap/tables.less";
+@import "~/Content/bootstrap/type.less";
+@import "~/Content/bootstrap/code.less";
+@import "~/Content/bootstrap/forms.less";
+@import "~/Content/bootstrap/tables.less";
 
 // Components: common
-@import "../bootstrap/font/font-awesome.less";
-@import "../bootstrap/dropdowns.less";
-@import "../bootstrap/wells.less";
-@import "../bootstrap/component-animations.less";
-@import "../bootstrap/close.less";
+@import "~/Content/bootstrap/font/font-awesome.less";
+@import "~/Content/bootstrap/dropdowns.less";
+@import "~/Content/bootstrap/wells.less";
+@import "~/Content/bootstrap/component-animations.less";
+@import "~/Content/bootstrap/close.less";
 
 // Components: Buttons & Alerts
-@import "../bootstrap/buttons.less";
-@import "../bootstrap/button-groups.less";
-@import "../bootstrap/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+@import "~/Content/bootstrap/buttons.less";
+@import "~/Content/bootstrap/button-groups.less";
+@import "~/Content/bootstrap/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 
 // Components: Nav
-@import "../bootstrap/navs.less";
+@import "~/Content/bootstrap/navs.less";
 
 // Components: Popovers
-@import "../bootstrap/modals.less";
-@import "../bootstrap/tooltip.less";
+@import "~/Content/bootstrap/modals.less";
+@import "~/Content/bootstrap/tooltip.less";
 
 // Components: Misc
-@import "../bootstrap/labels-badges.less";
-@import "../bootstrap/progress-bars.less";
+@import "~/Content/bootstrap/labels-badges.less";
+@import "~/Content/bootstrap/progress-bars.less";
 
 // (MC) extra 3rd party or own components
-@import "../bootstrap/custom/checkbox.less";
-@import "../bootstrap/custom/throbber.less";
-@import "../bootstrap/custom/select2.less";
+@import "~/Content/bootstrap/custom/checkbox.less";
+@import "~/Content/bootstrap/custom/throbber.less";
+@import "~/Content/bootstrap/custom/select2.less";
 
 // (MC) extra tweaks and corrections
-@import "../bootstrap/custom/custom.less";
+@import "~/Content/bootstrap/custom/custom.less";
 
 // Utility classes
-@import "../bootstrap/utilities.less"; // Has to be last to override when necessary
+@import "~/Content/bootstrap/utilities.less"; // Has to be last to override when necessary
 
 .clearfix {
 	*zoom: 1;
