--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/Head.cshtml
@@ -4,9 +4,7 @@
 
 @{
     var supportRtl = EngineContext.Current.Resolve<IWorkContext>().WorkingLanguage.Rtl;
-}
-@{
-    Html.AppendCssFileParts(true, "~/Themes/Alpha/Content/theme.less");
+    Html.AppendCssFileParts(false, "~/Themes/Alpha/Content/theme.less");
 }
 
 @Html.Partial("ConditionalComments")
