--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -13,8 +13,8 @@
     
     // add js assets (Head)
     Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-2.6.2.js",
-        "~/Scripts/jquery-1.8.3.js");
+        "~/Scripts/modernizr-{version}.js",
+        "~/Scripts/jquery-{version}.js");
 
     var bootstrapJsRoot = "~/Content/bootstrap/js/";
     Html.AppendScriptParts(ResourceLocation.Foot,
