--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.Mobile.cshtml
@@ -2,6 +2,15 @@
 @using SmartStore.Core.Infrastructure;
 @using SmartStore.Core.Infrastructure.DependencyManagement;
 
+@{
+    // add js assets
+    Html.AppendScriptParts(ResourceLocation.Head,
+        "~/Scripts/jquery-{version}.js",
+        "~/Scripts/jquery.validate.js",
+        "~/Scripts/jquery.validate.unobtrusive.js",
+        "~/Scripts/jquery.mobile-{version}.js"); 
+}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,22 +20,19 @@
     @*This is used so that themes can inject content into the header*@
     @Html.Partial("Head")
     @Html.Widget("mobile_head_html_tag")
-    @*custom css*@
+
     @Html.SmartCssFiles(this.Url, ResourceLocation.Head)
-    <script src="@Url.Content("~/Scripts/jquery-1.8.3.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    @Html.SmartScripts(this.Url, ResourceLocation.Head)
+
     @*do not handle links via ajax by default
-    1. automatically update page URLs (for example, when adding a product to the cart
-    2. process SSL redirections*@
+        1. automatically update page URLs (for example, when adding a product to the cart
+        2. process SSL redirections*@
     <script type="text/javascript">
         $(document).bind("mobileinit", function () {
             $.mobile.ajaxEnabled = false;
             $.mobile.hashListeningEnabled = false;
         });
     </script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.mobile-1.1.1.min.js")"></script>
-    @Html.SmartScripts(this.Url, ResourceLocation.Head)
 </head>
 <body>
     @RenderBody()
