Added multi-store support to Bundling

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/alerts.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/alerts.less
@@ -16,7 +16,7 @@
   color: @warningText;
 }
 .alert h4 {
-  margin: -2px 0 0 14px;
+  margin: 0; //-2px 0 0 14px;
 }
 
 // Adjust close link position
