--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/_AdminLayout.cshtml
@@ -24,12 +24,13 @@
     adminPageTitle += T("Admin.PageTitle").Text;
 
     // admin styles
-    Html.AddCssFileParts(false, "~/Administration/Content/theme.less");
+    //Html.AddCssFileParts(false, "~/Administration/Content/theme.less");
     
     // add css assets
     var jqueryCssRootPath = "~/Content/jquery-ui/base/";
     var telerikCssRootPath = "~/Content/2012.2.607/";
     Html.AppendCssFileParts(
+        "~/Administration/Content/theme.less",
         jqueryCssRootPath + "jquery.ui.core.css",
         jqueryCssRootPath + "jquery.ui.resizable.css",
         jqueryCssRootPath + "jquery.ui.selectable.css",
