breadcrumb adaption to respect background color of page body

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -584,11 +584,11 @@ nav ul, nav li {
 
 #breadcrumb {
     padding: 0;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     margin: 0;
-    border-bottom: 1px solid #d8d8d8;
-    background: #fff;
-    
+    border-bottom: 1px solid @var_ContainerBorder;
+    background: transparent;
+    .border-radius(0);
 	> li { 
 		.small();
 		color: @grayLight; 
