#196: Samples cannot be downloaded (it always says 'Product variant doesn't have a sample download')

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.SingleVariant.cshtml
@@ -232,7 +232,7 @@
                         @if (defaultProductVariant.HasSampleDownload)
                         {
                         <div>
-                            <a href="@Url.RouteUrl("GetSampleDownload", new { productvariantid = Model.Id })">
+                            <a href="@Url.RouteUrl("GetSampleDownload", new { productvariantid = defaultProductVariant.Id })">
                                 <i class="icon-download-alt"></i>
                                 @T("Products.DownloadSample")
                             </a>
