--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Methods.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Methods.cshtml
@@ -11,7 +11,7 @@
         @T("Admin.Configuration.Shipping.Methods")
     </div>
     <div class="options">
-        <a href="@Url.Action("CreateMethod")" class="btn"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="@Url.Action("CreateMethod")" class="btn btn-primary"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
     </div>
 </div>
 <table class="adminContent">
@@ -25,13 +25,20 @@
                     })
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.Name).Width(200);
-                        columns.Bound(x => x.Description).Width(400);
-                        columns.Bound(x => x.DisplayOrder).Width(100);
+                        columns.Bound(x => x.Name);
+                        columns.Bound(x => x.Description);
+                        columns.Bound(x => x.IgnoreCharges)
+                            .Template(item => @Html.SymbolForBool(item.IgnoreCharges))
+                            .ClientTemplate(@Html.SymbolForBool("IgnoreCharges"))
+                            .Width(160)
+                            .Centered();
+                        columns.Bound(x => x.DisplayOrder)
+                            .Width(160)
+                            .Centered();
                         columns.Bound(x => x.Id)
                             .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "EditMethod", new { id = x.Id }))
                             .ClientTemplate("<a href=\"EditMethod/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Width(50)
+                            .Width(160)
                             .Centered()
                             .HeaderTemplate(T("Admin.Common.Edit").Text);
                     })
