#45 Smarter logging. Save same log notifications only once including its frequency.

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -301,7 +301,7 @@ td.adminData {
 }
 
 .t-grid-header .t-header .t-link {
-	margin-top: -0.2em;
+    width: 100%;
 }
 
 .t-grid tbody {
@@ -351,7 +351,7 @@ td.adminData {
     padding: 4px;
 }
 .t-numerictextbox .t-formatted-value {
-    padding: 5px 4px 2px 6px;
+    padding: 4px 4px 2px 6px;
 }
 .t-numerictextbox .t-arrow-up {
     margin-top: 3px;
@@ -612,7 +612,8 @@ td.adminData .t-combobox {
 td.adminData .t-numerictextbox {
     margin-right: 4px; /* let it 'breathe' */
     .t-input {
-        width: 254px;
+        width: 261px;
+        padding: 4px 1px 3px 0;
     }
     &.small .t-input {
         width: 80px;
