--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/checkbox.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/checkbox.less
@@ -9,7 +9,7 @@
 	position: relative;
     width: 15px;
     height: 15px;
-    margin-top: 3px;
+    margin: 1px 0 3px 0;
 
 	&:disabled {
 		opacity: .75;
