Small CSS correction

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/checkbox.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/checkbox.less
@@ -9,7 +9,8 @@
 	position: relative;
     width: 15px;
     height: 15px;
-    margin: 1px 0 3px 0;
+    margin-top: 1px;
+    margin-bottom: 3px;
 
 	&:disabled {
 		opacity: .75;
