--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductDetailsPictures.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductDetailsPictures.Mobile.cshtml
@@ -19,13 +19,63 @@
             //hide progress
             $.mobile.hidePageLoadingMsg();
         }
+
+        //BEGIN: implement control of images via swiping
+        var currentImageIndex = 0;
+        var imageUrls = [];
+
+        @foreach (var picture in Model.PictureModels)
+        {
+            <text> imageUrls.push('@(picture.FullSizeImageUrl)');</text>
+        }
+
+
+        $(document).bind('pageinit', function (e) {
+            $("#default-image").on("swipeleft", swipeLeftHandler);
+            $("#default-image").on("swiperight", swipeRightHandler);
+            $("#picture-next").on("click", swipeLeftHandler);
+            $("#picture-prev").on("click", swipeRightHandler);
+        });
+
+        function swipeLeftHandler(event) {
+
+            if (currentImageIndex != imageUrls.length)
+                currentImageIndex = currentImageIndex + 1;
+
+            UpdateMainImage(imageUrls[currentImageIndex]);
+        }
+
+        function swipeRightHandler(event) {
+            
+            if (currentImageIndex != 0)
+                currentImageIndex = currentImageIndex - 1;
+
+            UpdateMainImage(imageUrls[currentImageIndex]);
+        }
+        //END: implement control of images via swiping
+
     </script>
-    <ul class="picture-thumbs">
+    
+    <div class="ui-grid-b">
+	    <div class="ui-block-a">
+            <div id="picture-prev" data-theme="c" class="ui-btn ui-btn-corner-all ui-shadow ui-btn-up-c" aria-disabled="false">
+                <span class="ui-btn-inner ui-btn-corner-all" aria-hidden="true"><span class="ui-btn-text">Zurück</span></span>
+            </div>
+	    </div>
+	    <div class="ui-block-b"></div>
+	    <div class="ui-block-c">
+            <div id="picture-next" data-theme="c" class="ui-btn ui-btn-corner-all ui-shadow ui-btn-up-c" aria-disabled="false">
+                <span class="ui-btn-inner ui-btn-corner-all" aria-hidden="true"><span class="ui-btn-text">Vor</span></span>
+            </div>
+	    </div>
+    </div>
+    
+    @*<ul class="picture-thumbs">
         @foreach (var picture in Model.PictureModels)
         {
             <li class="picture">
                 <img src="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" onclick="UpdateMainImage('@(picture.FullSizeImageUrl)')" />
             </li>
         }
-    </ul>
+    </ul>*@
 }
